--- a/myblog/templates/404.html
+++ b/myblog/templates/404.html
@@ -1,19 +1,11 @@
-{% extends 'blog/base.html' %}
-{% load staticfiles %}
-
-{% block title %}
+{% extends 'blog/base.html' %} {% load staticfiles %} {% block title %}
 <title>Not Found - Sujin Lee</title>
-{% endblock %}
-
-{% block ogtags %}
-<meta property="og:type"   content="website" /> 
+{% endblock %} {% block ogtags %}
+<meta property="og:type" content="website" />
 <meta property="og:title" content="About - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
-<meta property="og:url" content="http://www.sujinlee.me/about/" />
-
-{% endblock %}
-{% block content %}
+<meta property="og:url" content="http://www.sujinlee.me/about/" /> {% endblock %} {% block content %}
 <header class="page_title">
   <h1>Not Found</h1>
 </header>
