--- a/myblog/static/src/scss/index.scss
+++ b/myblog/static/src/scss/index.scss
@@ -1,124 +1,123 @@
 /* common styling */
+
 $page_margin: 3%;
 $default_page_margin: 7vh;
 $mobile_page_margin: $default_page_margin / 2;
 $snb_left_width_home: 30vw;
 $snb_left_width_home_pad: 35vw;
 $main_width_home: 100vw - $snb_left_width_home;
-
 * {
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-body { width:100%; height:100%; overflow:hidden; }
-
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 
 #snb_left_box {
-width: $snb_left_width_home !important;
+  width: $snb_left_width_home !important;
 }
 
 main {
-overflow-y: auto;
-width: $main_width_home !important;
+  overflow-y: auto;
+  width: $main_width_home !important;
 }
 
 $txt_margin: 4%;
 .home_title {
-h1 {
-  font-size: 3rem;
-  margin-bottom: $txt_margin;
+  h1 {
+    font-size: 3rem;
+    margin-bottom: $txt_margin;
+  }
+  h2 {
+    margin-bottom: $txt_margin * 2;
+    font-size: 1.8rem;
+  }
+  h3 {
+    font-size: 1.3rem;
+  }
 }
-h2 {
-  margin-bottom: $txt_margin * 2;
-  font-size: 1.8rem;
-}
-h3 {
-  font-size: 1.3rem;
-}
-}
-
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
-html,
-body {
-overflow: hidden;
-position: relative;
-min-height: 100%;
-}
-#container {
-// margin: $mobile_page_margin !important;
-position:relative; //that's it
-overflow:hidden;
 
-}
-#snb_left_box {
-width: 100vw !important;
-}
-.snb_left {
-h1 {
-margin-bottom: $mobile_page_margin;
-transform: translate(-$mobile_page_margin, -$mobile_page_margin);
-}
-}
-main {
-width: 0vw !important;
-}
-.home_title, mark {
-color: #fff;
-}
-.ico_menu span, .ico_menu span:before, .ico_menu span:after{
-background: #fff;
-opacity: 0.9;
-}
-._active span {
-background-color: transparent;
-transition-delay: 0.2s;
-}
-
-.home {
-&_img {
-top: 26vh;
-width: 60vw;
-height: 30vh;
-margin: 2.5vh;
-}
-&_title{
-top: 55vh;
-width: 90%;
-margin: 5%;
-text-align: center;
-h1 {
-display: none;
-}
-h2 {
-font-size: 1.5rem;
-margin-bottom: 5%;
-}
-h3 {
-font-size: 1rem;
-}
-}
-}
-
-.snb_left {
-display: block !important;
-}
-
-.snb_left ul:nth-child(-n+2) .title{
-margin-top: 2vh;
-}
-.contact {
-transform: translate(-$mobile_page_margin, $mobile_page_margin);
-
-}
-.contact, ul.ico_soical {
-font-size: 0.9rem;
-// transform: translateY(7vh);
-}
-
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  html,
+  body {
+    overflow: hidden;
+    position: relative;
+    min-height: 100%;
+  }
+  #container {
+    // margin: $mobile_page_margin !important;
+    position: relative; //that's it
+    overflow: hidden;
+  }
+  #snb_left_box {
+    width: 100vw !important;
+  }
+  .snb_left {
+    h1 {
+      margin-bottom: $mobile_page_margin;
+      transform: translate(-$mobile_page_margin, -$mobile_page_margin);
+    }
+  }
+  main {
+    width: 0vw !important;
+  }
+  .home_title,
+  mark {
+    color: #fff;
+  }
+  .ico_menu span,
+  .ico_menu span:before,
+  .ico_menu span:after {
+    background: #fff;
+    opacity: 0.9;
+  }
+  ._active span {
+    background-color: transparent;
+    transition-delay: 0.2s;
+  }
+  .home {
+    &_img {
+      top: 26vh;
+      width: 60vw;
+      height: 30vh;
+      margin: 2.5vh;
+    }
+    &_title {
+      top: 55vh;
+      width: 90%;
+      margin: 5%;
+      text-align: center;
+      h1 {
+        display: none;
+      }
+      h2 {
+        font-size: 1.5rem;
+        margin-bottom: 5%;
+      }
+      h3 {
+        font-size: 1rem;
+      }
+    }
+  }
+  .snb_left {
+    display: block !important;
+  }
+  .snb_left ul:nth-child(-n+2) .title {
+    margin-top: 2vh;
+  }
+  .contact {
+    transform: translate(-$mobile_page_margin, $mobile_page_margin);
+  }
+  .contact,
+  ul.ico_soical {
+    font-size: 0.9rem;
+    // transform: translateY(7vh);
+  }
 }
