--- a/myblog/templates/blog/post_edit.html
+++ b/myblog/templates/blog/post_edit.html
@@ -1,62 +1,47 @@
-{% extends 'blog/base.html' %}
-{% load staticfiles %}
-{% block title %}
+{% extends 'blog/base.html' %} {% load staticfiles %} {% block title %}
 
 <title>Write New Post - Sujin Lee</title>
-{% endblock %}
-{% block ogtags %}
-<meta property="og:type"   content="website" /> 
+{% endblock %} {% block ogtags %}
+<meta property="og:type" content="website" />
 <meta property="og:title" content="New Post" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
 <meta property="og:image" content="http://www.sujinlee.me/{{ post.image.url }}" />
-<meta property="og:url" content="http://www.sujinlee.me/blog/{{post.slug }}/" />
-{% endblock %}
-
-{% block stylesheet %}
+<meta property="og:url" content="http://www.sujinlee.me/blog/{{post.slug }}/" /> {% endblock %} {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'dist/css/form.css' %}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-{% endblock %}
-
-{% block content %}
+{% endblock %} {% block content %}
 <div id="form_wrap">
   <form method="post" enctype="multipart/form-data" class="blogForm">
-  {% csrf_token %}
+    {% csrf_token %}
     <header>
       <h1><a href="/">SUJIN LEE</a></h1>
       <div class="btn_wrap">
-        <input type="submit" class="form-btn" value="publish"/>
+        <input type="submit" class="form-btn" value="publish" />
         <input type="reset" class="form-btn" value="draft">
       </div>
     </header>
-   
+
     <div class="form_field">
       <div class="select-box">
-      <span class="label-desc icon-folder"></span> </label>
-      {{ form.category }}
-      <span class="label-desc icon-picture"></span>{{ form.image }}
+        <span class="label-desc icon-folder"></span> </label>
+        {{ form.category }}
+        <span class="label-desc icon-picture"></span>{{ form.image }}
       </div>
-        
-     {{form.published_date}}
-     {{ form.title }}
-     {{ form.summary }}
-     {{ form.body }}
-  
-     <div class="tags_field">{{ form.tag }}</div>
-      {% if form.errors %}
-      {% endif %}
-      {{ form.errors.slug }}
-      {{ form.slug }}
-      </div>
-    </form>
-    </div>
-  </div>
-  <div class="message"></div>
-  <button class="btn_gototop material-icons">keyboard_arrow_up</button>
-{% endblock %}
 
-{% block jsblock %}
+      {{form.published_date}} {{ form.title }} {{ form.summary }} {{ form.body }}
+
+      <div class="tags_field">{{ form.tag }}</div>
+      {% if form.errors %} {% endif %} {{ form.errors.slug }} {{ form.slug }}
+    </div>
+  </form>
+</div>
+</div>
+<div class="message"></div>
+<button class="btn_gototop material-icons">keyboard_arrow_up</button> {% endblock %} {% block jsblock %}
 <script src="{% static 'src/js/highlight.pack.js' %}"></script>
 <script src="{% static 'src/js/post_edit.js' %}"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script>
+  hljs.initHighlightingOnLoad();
+</script>
 {% endblock %}
