--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -1,20 +1,11 @@
-{% extends 'blog/base.html' %}
-{% load staticfiles %}
-{% load django_markdown %}
-
-{% block title %}
+{% extends 'blog/base.html' %} {% load staticfiles %} {% load django_markdown %} {% block title %}
 <title>{{ project.title }} - Project</title>
-{% endblock %}
-
-{% block ogtags %}
-<meta property="og:type"   content="website" /> 
+{% endblock %} {% block ogtags %}
+<meta property="og:type" content="website" />
 <meta property="og:title" content="{{ project.title }} - Sujin Lee" />
 <meta property="og:description" content="{{ project.summary|truncatechars:230 }}" />
 <meta property="og:image" content="http://www.sujinlee.me/{{ project.image.url }}" />
-<meta property="og:url" content="http://www.sujinlee.me/blog/{{project.slug }}/" />
-{% endblock %}
-
-{% block content %}
+<meta property="og:url" content="http://www.sujinlee.me/blog/{{project.slug }}/" /> {% endblock %} {% block content %}
 <header class="page_title">
   <a href="/project"><button class="btn_back material-icons">keyboard_backspace</button></a>
   <h1>Project</h1>
@@ -41,8 +32,7 @@
   {% if tags %}
   <div class="tag_box">
     {% for tag in tags %}
-    <a href= "{% url 'tagged_object_list' tag.name %}" class="tag">{{tag.name}}</a>
-    {% endfor %}
+    <a href="{% url 'tagged_object_list' tag.name %}" class="tag">{{tag.name}}</a> {% endfor %}
   </div>
   {% endif%}
   <footer class="share_container">
@@ -51,30 +41,25 @@
         <div class="btn_like project-like" data-post-id="{{project.id}}">
           {% if liked %}
           <span class="show_like icon-heart"></span>
-          <span class="show_unlike icon-heart" style="display: none"></span>
-          {% else %}
+          <span class="show_unlike icon-heart" style="display: none"></span> {% else %}
           <span class="show_like icon-heart" style="display: none"></span>
-          <span class="show_unlike icon-heart "></span>
-          {% endif %}
+          <span class="show_unlike icon-heart "></span> {% endif %}
         </div>
         <span class="like_count">{{ project.likes }}</span>
       </li>
       <!-- <li><span class="icon-bubble"></span><a href="{% url 'project_detail' slug=project.slug %}#disqus_thread"></a></li> -->
     </ul>
     <ul>
-      <a class="facebook btn_share"
-        href = "http://www.facebook.com/share.php?u=http://www.sujinlee.me/project/{{ project.slug }}"
+      <a class="facebook btn_share" href="http://www.facebook.com/share.php?u=http://www.sujinlee.me/project/{{ project.slug }}"
         target="_blank" onclick="return fbshare()">
         <li class="icon-social-facebook"></li>
       </a>
-      <a class="twitter btn_share"
-        href="http://twitter.com/share?url=http://www.sujinlee.me/project/{{ project.slug }}
+      <a class="twitter btn_share" href="http://twitter.com/share?url=http://www.sujinlee.me/project/{{ project.slug }}
         &amp;text={{ project.title }} http://www.sujinlee.me/project/{{ project.slug }} via @sujinleeme &amp;hashtags={{ project.category.title }}"
         target="_blank" title="Twitter Share">
         <li class="icon-social-twitter"></li>
       </a>
-      <a class="google_plus btn_share"
-        href="https://plus.google.com/share?url=http://www.sujinlee.me/project/{{ project.slug }}"
+      <a class="google_plus btn_share" href="https://plus.google.com/share?url=http://www.sujinlee.me/project/{{ project.slug }}"
         target="_blank" title="Google Plus Share">
         <li class="icon-social-google"></li>
       </a>
@@ -89,8 +74,7 @@
       <h2 class="title-left">{{ previous.title|truncatechars:46 }}</h2>
     </div>
   </div>
-  {% endif %}
-  {% if next %}
+  {% endif %} {% if next %}
   <div class="pagination_col" onclick="location.href='{% url 'project_detail' slug=next.slug %}';">
     <div class="next_page">
       <h2 class="title-left">{{ next.title|truncatechars:46 }}</h2>
@@ -102,33 +86,29 @@
 </nav>
 <!--<div class="disqus" id="disqus_thread"></div>-->
 <button class="btn_expand material-icons">keyboard_arrow_left</button>
-<button class="btn_gototop material-icons">keyboard_arrow_up</button>
-{% endblock %}
-
-{% block jsblock %}
+<button class="btn_gototop material-icons">keyboard_arrow_up</button> {% endblock %} {% block jsblock %}
 <script src="{% static 'src/js/highlight.pack.js' %}"></script>
 <script src="{% static 'src/js/post_detail.js' %}"></script>
-<script>hljs.initHighlightingOnLoad();
-        window.onload = loadPreImage();
+<script>
+  hljs.initHighlightingOnLoad();
+  window.onload = loadPreImage();
 </script>
-{% endblock %}
-
-{% block facebookShare %}
+{% endblock %} {% block facebookShare %}
 <script>
   function fbshare() {
     FB.ui({
-        method: 'share_open_graph',
-        action_type: 'og.shares',
-        action_properties: JSON.stringify({
-          object: {
-            'og:url': 'http://sujinlee.me/project/{{ project.slug }}',
-            'og:title': '{{ project.title }} - Sujin Lee',
-            'og:description': '{{ project.summary|truncatechars:230 }}',
-            'og:image': 'http://www.sujinlee.me/{{ project.image.url }}/',
-            'og:type': 'Sujin Lee:blog',
-          }
-        })
-      });
+      method: 'share_open_graph',
+      action_type: 'og.shares',
+      action_properties: JSON.stringify({
+        object: {
+          'og:url': 'http://sujinlee.me/project/{{ project.slug }}',
+          'og:title': '{{ project.title }} - Sujin Lee',
+          'og:description': '{{ project.summary|truncatechars:230 }}',
+          'og:image': 'http://www.sujinlee.me/{{ project.image.url }}/',
+          'og:type': 'Sujin Lee:blog',
+        }
+      })
+    });
   }
 </script>
 {% endblock %}
