Fix https in obtag

--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -10,8 +10,8 @@
 <meta property="og:type"   content="website" /> 
 <meta property="og:title" content="About - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
-<meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
-<meta property="og:url" content="http://www.sujinlee.me/about/" />
+<meta property="og:image" content="https://www.sujinlee.me/image/background/profile-about.png" />
+<meta property="og:url" content="https://www.sujinlee.me/about/" />
 
 {% endblock %}
 {% block content %}
