--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -19,7 +19,7 @@
     <meta property="og:author" content="https://www.facebook.com/sujinlee.me" />
     {% block ogtags %}
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="The connectivist" />
+    <meta property="og:description" content="Creative Developer" />
     <meta property="og:image"content="https://www.sujinlee.me/static/image/background/profile-about.png" />
     <meta property="og:url" content="https://www.sujinlee.me/" />
     {% endblock %}
