--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -3,10 +3,10 @@
 
 {% block ogtags %}
 <meta property="og:type"   content="website" /> 
-<meta property="og:title" content="Sujin Lee | Creative Developer" />
-<meta property="og:description" content="Personal Website" />
-<meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
-<meta property="og:url" content="http://www.sujinlee.me/" />
+<meta property="og:title" content="Sujin Lee" />
+<meta property="og:description" content="Creative Developer" />
+<meta property="og:image" content="https://www.sujinlee.me/image/background/profile-about.png" />
+<meta property="og:url" content="https://www.sujinlee.me/" />
 {% endblock %}
 
 {% block stylesheet %}
