--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -10,8 +10,8 @@
 <meta property="og:type"   content="article" /> 
 <meta property="og:title" content="{{ post.title }} - Sujin Lee" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
-<meta property="og:image" content="http://www.sujinlee.me/{{ post.image.url }}" />
-<meta property="og:url" content="http://www.sujinlee.me/blog/{{post.slug }}/" />
+<meta property="og:image" content="https://www.sujinlee.me/{{ post.image.url }}" />
+<meta property="og:url" content="https://www.sujinlee.me/blog/{{post.slug }}/" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
 {% block stylesheet %}
 <script id="dsq-count-scr" src="//sujinlee.disqus.com/count.js" async></script>
@@ -146,10 +146,10 @@ hljs.initHighlightingOnLoad();
         action_type: 'og.shares',
         action_properties: JSON.stringify({
           object: {
-            'og:url': 'http://www.sujinlee.me/blog/{{ blog.slug }}',
+            'og:url': 'https://www.sujinlee.me/blog/{{ blog.slug }}',
             'og:title': '{{ blog.title }}',
             'og:description': '{{ blog.summary|truncatechars:230 }}',
-            'og:image': 'http://www.sujinlee.me/{{ blog.image.url }}/',
+            'og:image': 'https://www.sujinlee.me/{{ blog.image.url }}/',
           }
         })
       });
