--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -9,8 +9,8 @@
 <meta property="og:type"   content="website" />
 <meta property="og:title" content="Blog - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
-<meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
-<meta property="og:url" content="http://www.sujinlee.me/project/" />
+<meta property="og:image" content="https://www.sujinlee.me/image/background/profile-about.png" />
+<meta property="og:url" content="https://www.sujinlee.me/project/" />
 {% endblock %}
 {% block stylesheet %}
 <script id="dsq-count-scr" src="//sujinlee.disqus.com/count.js" async></script>
