--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -10,8 +10,8 @@
 <meta property="og:type"   content="article" /> 
 <meta property="og:title" content="{{ project.title }} - Sujin Lee" />
 <meta property="og:description" content="{{ project.summary|truncatechars:230 }}" />
-<meta property="og:image" content="http://www.sujinlee.me/{{ project.image.url }}" />
-<meta property="og:url" content="http://www.sujinlee.me/blog/{{project.slug }}/" />
+<meta property="og:image" content="https://www.sujinlee.me/{{ project.image.url }}" />
+<meta property="og:url" content="https://www.sujinlee.me/blog/{{project.slug }}/" />
 {% endblock %}
 
 {% block content %}
@@ -121,10 +121,10 @@
         action_type: 'og.shares',
         action_properties: JSON.stringify({
           object: {
-            'og:url': 'http://www.sujinlee.me/project/{{ project.slug }}',
+            'og:url': 'https://www.sujinlee.me/project/{{ project.slug }}',
             'og:title': '{{ project.title }} - Sujin Lee',
             'og:description': '{{ project.summary|truncatechars:230 }}',
-            'og:image': 'http://www.sujinlee.me/{{ project.image.url }}/',
+            'og:image': 'https://www.sujinlee.me/{{ project.image.url }}/',
           }
         })
       });
